# Interference_Raman_Amplification

./: README.md  pyproject.toml
raman_ampli/: __init__.py  layer.py  main.py  material.py  model.py  open_file.py  simulator.py  stack.py
raman_ampli/assets/: input_MODEL.xlsx
raman_ampli/assets/data_indices/: INFO_SiGe35.csv  Leti_SiGe24.csv  Leti_SiGe46.csv
raman_ampli/examples/: ex_01-impact_of_layer_of_interest_thickness.py  ex_02-impact_of_another_layer_thickness.py  ex_impact_of_another_layer_thickness.py  ex_impact_of_layer_of_interest_thickness.py
src/amplification/: __init__.py  aliases.py  array_def.py  layer.py  main.py  material.py  model.py  open_file.py  simulator.py
src/amplification/assets/data_indices/: INFO_Graphene.csv  INFO_SiO2.csv  Leti_SiGe30.csv  RefractiveIndexINFO_SiO2.csv
src/assets/: howto_venv_for_cxfreeze.txt  output_MODEL.xlsx  requirements.txt  run_MAIN.py  setup_cx.py
src/assets/data_indices/: INFO_SiGe15.csv  indices_MoS2_1ML.csv
src/examples/: ex_01-impact_of_layer_of_interest_thickness.py  ex_02-impact_of_another_layer_thickness.py  ex_impact_of_another_layer_thickness.py  ex_impact_of_layer_of_interest_thickness.py
tests/: test_amploi.py
