[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interference_Raman_amplification"
version = "2025.1"
description = "XXXX"
authors = [
    { name = "Damien Monteil", email = "damien.monteil@cea.fr" },
    { name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" },
    { name = "Yann Mazel", email = "yann.mazel@cea.fr" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "xlsxwriter",
    "shiboken6",
    "openpyxl"
]


[project.scripts]
raman_ampli = "amplification.main:launcher"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amplification" = [
    "assets/*",
    "examples/*"
]
