[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raman_ampli"
version = "2025.1"
description = "XXXX"
authors = [
    { name = "Damien Monteil", email = "damien.monteil@cea.fr" },
    { name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" },
    { name = "Yann Mazel", email = "yann.mazel@cea.fr" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "xlsxwriter",
    "shiboken6",
    "openpyxl"
]


[project.scripts]
raman_ampli = "raman_ampli.main:launcher"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"raman_ampli" = ["assets/**/*"]
